# MSReader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  readme.rst  setup.cfg  tox.ini
.github/workflows/: deploy_pypi.yml  deploy_test_pypi.yml  tests.yml
ms_reader/: __init__.py  __main__.py  app.py  extract.py  skyline_convert.py  utils.py
tests/: test_extractor.py
tests/data/: Calibration Report.xlsx  Metadata.xlsx  good_tables_no_norm.xlsx  good_tables_norm.xlsx  test_data.xlsx
tests/data/no_cal/: Tables.xlsx  test_data.xlsx
tests/data/skyline/: Quantif-MC.txt
