[metadata]
name = ms_reader
version = attr: ms_reader.__version__
author = Loïc Le Grégam
author_email = legregam@insa-toulouse.fr
description = Package for parsing a Tracefinder file containing processed Mass Spectrometry data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/llegregam/MSReader
project_urls =
    Bug Tracker = https://github.com/llegregam/MSReader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.3.4
    numpy >= 1.21.4
    natsort >= 8.0.0
    streamlit>=1.8.0
    openpyxl >= 3.0.9

[options.entry_points]
console_scripts =
    ms_reader = ms_reader.__main__:main